<resources>
    <string name="app_name">Gestao de Contatos</string>
    <string name="texto">Gestão de Contatos 1.2</string>
    <string name="nome_hint">Nome</string>
    <string name="telefone_hint">Telefone</string>
    <string-array name="telefone_types">
        <item>Casa</item>
        <item>Celular</item>
        <item>Fax</item>
        <item>Trabalho</item>
    </string-array>
    <string name="sexo">SEXO</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="email">EMAIL</string>
    <string-array name="email_types">
        <item>Pessoal</item>
        <item>Trabalho</item>
        <item>Outro</item>
    </string-array>
    <string name="afinidade">AFINIDADE</string>
    <string name="email_hint">Email</string>
    <string name="salvar">SALVAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_settings">Configurações</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_save">Salvar</string>
    <string name="home">Tela principal</string>
    <string name="all_contacts">Todos os contatos</string>
    <string name="favorites">Favoritos</string>
    <string name="developed_by">Desenvolvido por</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="yes">SIM</string>
    <string name="no">NÃO</string>
    <string name="search_contact">Buscar Contatos</string>
    <string name="edit_contact">Edição de contato</string>
    <string name="contacts">Contatos</string>
    <string name="send_picture">Enviar foto</string>
    <string name="camera">Câmera</string>
    <string name="galery">Galeria</string>
</resources>
